--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pyteomics==4.4.2
-pandas==1.3.1
-click==8.0.1
-pyopenms==2.6.0
-typing_extensions==4.1.1
-seaborn-qqplot=0.5.0
+pyteomics
+pandas
+click
+pyopenms
+typing_extensions
+seaborn-qqplot
+qnorm
+combat
