--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,10 +34,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Test with normalization
       run: |
-        pip install pytest
-        pip install pytest-cov
-        cd pypgatk
-        pytest
+        python --log2 --peptides ./data/heart-grouped-Intensities.tsv --contaminants contaminants_ids.tsv --routliers --output data/heart-grouped-Intensities-Norm.tsv --verbose --nmethod qnorm
 
