--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 missingpy
-scikit-learn==0.22.1
+scikit-learn==1.0.2
 pyopenms
-numpy == 1.21
-click
+numpy==1.21.6
+click==8.1.3
 pandas
 matplotlib
 qnorm
-seaborn == 0.10
-typing_extensions
+seaborn==0.12.2
+typing_extensions==4.5.0
