--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 missingpy
-scikit-learn==1.0.2
+scikit-learn==0.22.1
 pyopenms
-numpy==1.21.6
-click==8.1.3
+numpy == 1.21
+click
 pandas
 matplotlib
 qnorm
-seaborn==0.12.2
-typing_extensions==4.5.0
+seaborn == 0.10
+typing_extensions
