--- a/conda-environment.yaml
+++ b/conda-environment.yaml
@@ -17,5 +17,6 @@ dependencies:
   - pip:
       - git+https://github.com/Maarten-vd-Sande/qnorm
   - seaborn
+  - quantmsio
   - typing_extensions
   - setuptools
