--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "dev"]
 
 jobs:
   build:
@@ -43,4 +43,4 @@ jobs:
         pytest
     - name: Test commandline tool
       run: |
-        quantmsutilsc --help
+        ibaqpyc --help
