--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,10 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install poetry
-        poetry build
-        pip install dist/*.whl
+        poetry install
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
