major changes for package remove setup.py

--- a/environment.yaml
+++ b/environment.yaml
@@ -6,11 +6,12 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - python>=3.9
   - scikit-learn
   - pyopenms
-  - numpy
+  - numpy<2.1.0
   - click
-  - pandas>=2.0.2
+  - pandas
   - matplotlib
   - pyarrow>=16.1.0
   - duckdb>=0.10.1
