--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,12 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
+python = ">=3.9"
 scikit-learn = "*"
 pyopenms = "*"
-numpy = "*"
+numpy = "<2.1.0"
 click = "*"
-pandas = ">=2.0.2"
+pandas = "*"
 matplotlib = "*"
 pyarrow = ">=16.1.0"
 duckdb = ">=0.10.1"
