--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,7 +8,7 @@ source:
 
 build:
   entry_points:
-    - ibaqpyc=ibaqpy:ibaqpyc:main
+    - ibaqpyc=ibaqpy.ibaqpyc:main
   run_exports:
     - {{ pin_subpackage('ibaqpy', max_pin="x.x") }}
   script: "{{ PYTHON }} -m pip install . --no-deps --no-build-isolation --no-cache-dir -vvv"
@@ -21,11 +21,12 @@ requirements:
     - pip
     - poetry-core >=1.2.0
   run:
+    - python>=3.9
     - scikit-learn
     - pyopenms
-    - numpy
+    - numpy<2.1.0
     - click
-    - pandas>=2.0.2
+    - pandas
     - matplotlib
     - pyarrow>=16.1.0
     - duckdb>=0.10.1
