major changes for package remove setup.py

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,9 +23,9 @@ requirements:
   run:
     - scikit-learn
     - pyopenms
-    - numpy
+    - numpy<2.1.0
     - click
-    - pandas>=2.0.2
+    - pandas
     - matplotlib
     - pyarrow>=16.1.0
     - duckdb>=0.10.1
