--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest
           pip install poetry
-          poetry install
+          poetry build
+          pip install dist/*.whl
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
