--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -24,7 +24,9 @@ jobs:
 
     - name: Setup conda-build and anaconda-client
       run: |
-         mamba install -q conda-build anaconda-client conda-verify
+        conda config --add channels conda-forge
+        conda config --set channel_priority strict
+        mamba install -q conda-build anaconda-client conda-verify
 
     - name: Build package
       run: |
