--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -24,6 +24,7 @@ jobs:
 
     - name: Setup conda-build and anaconda-client
       run: |
+        conda config --remove channels defaults
         conda config --add channels conda-forge
         conda config --set channel_priority strict
         mamba install -q conda-build anaconda-client conda-verify
