--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-scikit-learn
-pyopenms
+scikit-learn~=1.6.1
+pyopenms~=2.7.0
 numpy<2.1.0
-click
-pandas
-matplotlib
+click~=8.1.3
+pandas~=2.0.1
+matplotlib~=3.7.1
 pyarrow>=16.1.0
 duckdb>=0.10.1
 qnorm
 scipy>=1.10
-seaborn
+seaborn~=0.10.0
 typing_extensions>=4.6.3
 inmoose
+pytest~=8.3.4
