--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pyarrow>=16.1.0
 duckdb>=0.10.1
 qnorm
 scipy>=1.10
-seaborn~=0.10.0
+seaborn>=0.13.2
 typing_extensions>=4.6.3
 inmoose
 pytest~=8.3.4
