--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
     "Yasset Perez-Riverol <ypriverol@gmail.com>",
     "Dai Chengxin <chengxin2024@126.com>",
     "Julianus Pfeuffer <jule.pf@gmail.com>",
+    "Joshua Klein <joshua.adam.klein@gmail.com>",
+    "Enrique Audain <enrique.audain.martinez@uni-oldenburg.de>",
 ]
 keywords = [
     "quantms",
