--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ authors = [
     "Julianus Pfeuffer <jule.pf@gmail.com>",
     "Joshua Klein <joshua.adam.klein@gmail.com>",
     "Enrique Audain <enrique.audain.martinez@uni-oldenburg.de>",
+    "Ping Zheng <zprobot80@gmail.com>"
 ]
 keywords = [
     "quantms",
